--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
-  padding: 15px;
+  padding: 5px;
 }
 .background input,
 select {
@@ -119,6 +119,7 @@ button {
   width: 100%;
   border-radius: 20px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
+  margin-top: 5px;
 }
 
 @media (max-width: 900px) {
